tests/bad/main_args_missing.alp
function void main():
print("HI")
end 
